# llm_local

./: .gitignore  README.md  REQUIREMENTS.md  main.py  pyproject.toml
.cursor/rules/: projectrule1.mdc  techstack.mdc
src/backend/: api.py
src/frontend/: app.py
