[project]
name = "llm-chat-ui"
version = "0.1.0"
description = "A chat interface for interacting with different LLMs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.32.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "accelerate>=1.6.0",
    "huggingface-hub",
    "psutil>=5.9.0"
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
llm-chat-ui = { workspace = true }

[dependency-groups]
dev = [
    "llm-chat-ui",
]

[project.scripts]
llm-chat-frontend = "src.frontend.app:main"
llm-chat-backend = "src.backend.main:main"
